# api_parking_lots_ai

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
app/misc/: lifespan.py
app/misc/di/: factories.py  setup.py
app/misc/models/: authentication.py  user.py
app/routers/: example.py  login.py  register.py  top_up.py
app/services/: hasher.py  security.py
app/services/db/: db_commands.py  db_models.py
app/services/db/dto/: users.py
app/settings/: .env.dist  config.py
src/: main.py
src/adapters/db/: db_commands.py  main.py  models.py
src/adapters/db/migrations/: env.py
src/adapters/db/migrations/versions/: b8811e1dfbd5_init.py
src/controllers/: login.py  predict.py  profile.py  profile_payments.py  profile_payments_by_id.py  profile_requests.py  profile_requests_by_id.py  profile_update.py  register.py  support.py  support_by_id.py  top_up.py
src/di/: auth.py  factories.py  setup.py
src/exceptions/: main.py
src/exceptions/classes/: __init__.py  auth.py  common.py  payment.py  request.py  ticket.py  user.py
src/exceptions/handlers/: __init__.py  auth.py  common.py  payment.py  request.py  ticket.py  user.py
src/misc/: lifespan.py  logger.py
src/misc/dto/: common.py  payment.py  payments.py  prediction.py  requests.py  tickets.py  users.py
src/services/: hasher.py  predictor.py  security.py
src/services/db/: db_commands.py  main.py  models.py
src/services/db/migrations/: env.py
src/settings/: .env.dist  config.py
v1/: .gitignore  main.py
v1/app/misc/: lifespan.py  logger.py
v1/app/misc/di/: factories.py  setup.py
v1/app/routers/: login.py  register.py  top_up.py
v1/app/services/: security.py
v1/app/services/db/: db_commands.py  db_models.py
v1/app/services/db/dto/: authentication.py
