[tool.poetry]
name = "api-parking-lots-ai"
version = "0.1.0"
description = ""
authors = ["utsiye <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
bcrypt = "4.0.1"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2023.11.17"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.2.0"
crashtest = "0.4.1"
cryptography = "41.0.5"
cycler = "0.12.1"
distlib = "0.3.8"
docutils = "0.20.1"
dulwich = "0.21.7"
ecdsa = "0.18.0"
environs = "9.5.0"
exceptiongroup = "1.1.3"
fastapi = "0.104.0"
fastjsonschema = "2.19.1"
ffmpeg-python = "0.2.0"
filelock = "3.13.1"
fonttools = "4.49.0"
fsspec = "2024.2.0"
future = "1.0.0"
greenlet = "3.0.1"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.26.0"
idna = "3.4"
imageio = "2.34.0"
imageio-ffmpeg = "0.4.9"
importlib-metadata = "6.8.0"
iniconfig = "2.0.0"
installer = "0.7.0"
jaraco-classes = "3.3.0"
jinja2 = "3.1.3"
keyring = "24.3.0"
kiwisolver = "1.4.5"
loguru = "0.7.2"
mako = "1.3.2"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
marshmallow = "3.20.1"
matplotlib = "3.8.3"
mdurl = "0.1.2"
more-itertools = "10.1.0"
mpmath = "1.3.0"
msgpack = "1.0.8"
networkx = "3.2.1"
nh3 = "0.2.14"
numpy = "1.26.4"
opencv-python = "4.9.0.80"
packaging = "23.2"
pandas = "2.2.1"
passlib = "1.7.4"
pexpect = "4.9.0"
pillow = "10.2.0"
pkginfo = "1.9.6"
platformdirs = "4.2.0"
pluggy = "1.4.0"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"
psutil = "5.9.8"
ptyprocess = "0.7.0"
py-cpuinfo = "9.0.0"
pyasn1 = "0.5.1"
pycparser = "2.21"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
pygments = "2.17.2"
pyparsing = "3.1.1"
pyproject-hooks = "1.0.0"
pytest = "8.0.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-jose = "3.3.0"
python-multipart = "0.0.6"
pytz = "2024.1"
pywin32-ctypes = "0.2.2"
pyyaml = "6.0.1"
rapidfuzz = "3.7.0"
readme-renderer = "42.0"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rfc3986 = "2.0.0"
rich = "13.7.0"
rsa = "4.9"
scipy = "1.12.0"
seaborn = "0.13.2"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.25"
starlette = "0.27.0"
sympy = "1.12"
thop = "0.1.1.post2209072238"
tomli = "2.0.1"
tomlkit = "0.12.4"
torch = "2.2.1"
torchvision = "0.17.1"
tqdm = "4.66.2"
trove-classifiers = "2024.3.25"
typing-extensions = "4.8.0"
tzdata = "2024.1"
ultralytics = "8.1.18"
urllib3 = "2.1.0"
uvicorn = "0.24.0.post1"
virtualenv = "20.25.1"
win32-setctime = "1.1.0"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
